--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar fixed-top navbar-light bg-light">
         <a class="navbar-brand" href="#">Highscores</a>
-        <span class="navbar-text">Time: 00</span>
+        <span class="navbar-text" id="timeDisplay">Time: 00</span>
     </nav>
 
     <!-- div body for code quiz -->
@@ -32,7 +32,7 @@
             Do your best! 
         </p>
         <!-- div title and button to start!! after user click btn #starHere then show question and 4 choices answer buttons-->
-        <button type="button" class="btn btn-success" id= "startBtn">Start Quiz</button>
+        <button type="button" class="btn btn-success" id= "startButtonEl">Start Quiz</button>
       </div> 
 
       <!-- dispear instruction page-->
@@ -42,42 +42,20 @@
 
 
     <div class="jumbotron" id= "codeQuests">
-        <h2 class="display-4" id= "ansChoices"> question areas!</h1>
-        <p>
-            Hi, my name is JavaScript. When JavaScript was created, it initially had another name: “LiveScript”. 
-            But Java was very popular at that time, so it was decided that positioning a new language as a “younger brother” of Java would help.
-            But as it evolved, JavaScript became a fully independent language with its own specification called ECMAScript, and now it has no relation to Java at all.
+        <h2 class="display-4" id= "questionChoices"></h2>
+        <div class="btn-group" id="showChoices"></div>
 
-        </p>
-        <button type="button" class="btn btn-success" data-id= "0">Start Here</button>
-        <button type="button" class="btn btn-success" data-id= "1">Start Here</button>
-        <button type="button" class="btn btn-success" data-id= "2">Start Here</button>
-        <button type="button" class="btn btn-success" data-id= "3">Start Here</button>
+        <button type="button" class="btn btn-success" id= "0">Start Here</button>
+        <button type="button" class="btn btn-success" id= "1">Start Here</button>
+        <button type="button" class="btn btn-success" id= "2">Start Here</button>
+        <button type="button" class="btn btn-success" id= "3">Start Here</button>
     </div>
     <!--div answer -->
      <div class="divAlert" id="divAlertAns">Your answer is </div>
 
 
 
-    <!-- after finished or timeout, questions dissapear and result block display -->
-    <div class="showResult" id="totalScores">
-        <h3>Finished</h3>
-        <p>Total scores is:</p>
-        <h4 id="scoreResult">points</h4>
-        <form id="userInitial">
-            <div class="form-group">
-                <label for="inputUser">Please enter your initials</label>
-                <input type="text" class="form-control" id="inputInitial" placeholder="Your Initials!">
-            </div>
-        <button type="submit" class="btn btn-primary" id="sumitBtn">Submit</button>
-        </form>
-    </div>
-
-    <!-- submitpage dissapear and thank you for submit display -->
-    <div class="thankYou" id="wellDone">
-        <h5 class="thankYou">Well Done!</h5>
-        <p>Thank you for submitting your work.</p>
-    </div>
+   
 
 
     </div>
