Added time, questions and select buttons

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="jumbotron" id= "codeQuests">
         <h2 class="display-4" id= "questionChoices"></h2>
-        <div class="btn-group" id="showChoices"></div>
+        <div class="btn-group" id="ansChoices"></div>
 
         <button type="button" class="btn btn-success" id= "0">Start Here</button>
         <button type="button" class="btn btn-success" id= "1">Start Here</button>
