--- a/resultPage.html
+++ b/resultPage.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav class="navbar fixed-top navbar-light bg-light">
-        <a class="navbar-brand" href="#">Highscores</a>
+        <a class="navbar-brand" href="#" id="scores">Highscores</a>
         <span class="navbar-text" id="timeDisplay">Time: 00</span>
     </nav>
 
