Editted index Html page

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <button type="button" class="btn btn-success" id="2">Start Here</button>
             <button type="button" class="btn btn-success" id="3">Start Here</button>
         </div>
-        <!--div answer -->
-        <!-- <div class="divAlert" id="divAlertAns">Your answer is </div> -->
+        <!--show result -->
+      
         <div class="jumbotron d-none" id="totalScores">
             <h3>Finished</h3>
             <p>Total scores is: <span id="myScore"></span></p>
